test/Dialect/Bool/asserts_fail.llzk
// RUN: llzk-opt %s -split-input-file -verify-diagnostics

function.def @wrong_arg_type(
      %c: !felt.type // expected-note {{prior use here}}
    ) -> !felt.type {
  // expected-error@+1 {{use of value '%c' expects different type than prior uses: 'i1' vs '!felt.type'}}
  bool.assert %c
  function.return %c : !felt.type
}
// -----

module attributes {llzk.lang} {
  poly.template @TComponent01 {
    poly.param @T

    struct.def @Component01 {
      function.def @compute(
            %c: !poly.tvar<@T> // expected-note {{prior use here}}
          ) -> !struct.type<@TComponent01::@Component01<[@T]>> {
        %self = struct.new : !struct.type<@TComponent01::@Component01<[@T]>>
        // I doubt there's any reason to support type variable used as the assert condition.
        // expected-error@+1 {{use of value '%c' expects different type than prior uses: 'i1' vs '!poly.tvar<@T>'}}
        bool.assert %c
        function.return %self : !struct.type<@TComponent01::@Component01<[@T]>>
      }

      function.def @constrain(%self: !struct.type<@TComponent01::@Component01<[@T]>>, %c: !poly.tvar<@T>) {
        function.return
      }
    }
  }
}
